--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ DB_PASSWORD=Surya%402001
 JWT_STRING=84237543256123634875
 KEY_ID=rzp_test_2JipZf3VKn4c2u
 KEY_SECRET=6jdUCL9hkQkY836YmsYfgAAx
+TWILIO_ACCOUNT_SID=AC67de03fd38b525b95e6d3ace507b4330
+TWILIO_AUTH_TOKEN=0948b083f9f3a6daf978c61accbaf4ad
