--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
+    "pdfkit": "^0.14.0",
     "razorpay": "^2.9.2",
     "twilio": "^5.0.0-rc.1"
   }
